--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
