--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -22,6 +25,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-charts": "^5.2.1",
     "react-hook-form": "^7.53.1",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
