--- a/models/tsconfig.json
+++ b/models/tsconfig.json
@@ -7,6 +7,9 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "module": "ES6",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": [
+      "vitest/globals"
+    ]
   }
 }
