--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/checkout@v4
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v4
-            - run: cd ${GITHUB_WORKSPACE}/models
+            - run: cd ${GITHUB_WORKSPACE}/marathon-scheduler/models
             - run: npm ci
             - run: npm run build
             - run: npm run test
