--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,6 +15,6 @@ jobs:
             - run: |
                 npm ci
                 npm run build
-              working-directory: ${GITHUB_WORKSPACE}/models
+              working-directory: ${{ github.workspace }}/models
             - run: npm run test
-              working-directory: ${GITHUB_WORKSPACE}/models
+              working-directory: ${{ github.workspace }}/models
