--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,8 +2,8 @@ name: DockerBuild
 on:
   workflow_run:
     workflows: [Testing]
-    types: 
-      - completed
+    types: [completed]
+    branches: [develop, main]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -11,7 +11,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # if: ${{ github.event.workflow_run.conclusion == 'success' || github.ref_name == 'develop' }}
     steps:
       - 
         name: Checkout repository
