fix ci for packaging

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,10 @@ on: [push]
 #     workflows: [Testing]
 #     types: [completed]
 #     branches: [develop, main]
+
+permissions:
+  packages: write
+  
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
