--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,8 +7,9 @@ on: [push]
 #     branches: [develop, main]
 
 permissions:
+  contents: write
   packages: write
-  
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
