--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,7 +7,9 @@ on: [push]
 #     branches: [develop, main]
 
 permissions:
-  contents: write
+  id-token: write
+  contents: read
+  attestations: write
   packages: write
 
 env:
